# clawfeel

./: .gitignore  .npmignore  Dockerfile  README.md  SKILL.md  fly.toml  package.json  vercel.json
.claude/: settings.local.json
.github/workflows/: test.yml
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/icons/: generate.mjs
examples/: api-client.mjs  blockchain-vrf.mjs  dice.mjs  keygen.mjs  lottery.mjs
python-sdk/: .env.example  README.md  pyproject.toml
python-sdk/clawfeel/: __init__.py  client.py
scripts/: agent.mjs  beacon.mjs  clawfeel.mjs  connection.mjs  dag.mjs  dht.mjs  gossip.mjs  life.mjs  relay.mjs  sdk.mjs  store.mjs  stun.mjs  token.mjs  version-sync.mjs  webrtc.mjs  zkp.mjs
tests/: beacon.test.mjs  clawfeel.test.mjs  dag.test.mjs  dht.test.mjs  integration.test.mjs  life.test.mjs  store.test.mjs
web/: api-docs.html  browser-entropy.js  demo.html  enterprise.html  explorer.html  i18n.js  index.html  simulator.html  version.js  whitepaper.html
