[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawfeel"
version = "0.1.0"
description = "Python SDK for ClawFeel — decentralized hardware entropy network"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ClawFeel", email = "contact@clawfeel.com"}]
keywords = ["random", "entropy", "decentralized", "hardware", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://clawfeel.ai"
Documentation = "https://clawfeel.ai/api-docs.html"
Repository = "https://github.com/clawfeel/clawfeel"

[tool.setuptools.packages.find]
include = ["clawfeel*"]
